<resources>

    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录/注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--应用标题-->
    <string name="app_name">办公平台</string>

    <!--错误提示-->
    <string name="error_invalid_email">邮箱错误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填项</string>

    <!--Activiti标题-->
    <string name="title_activity_home">主页</string>
    <string name="title_activity_ask_for_leave">请假</string>
    <string name="title_activity_bpm">流程工作台</string>
    <string name="title_activity_workbench">流程工作台</string>

    <!--片段标题-->
    <!--流程-->
    <string name="fragment_bpm_start">发起流程</string>
    <string name="fragment_bpm_my_todo">我的待办</string>
    <string name="fragment_bpm_my_done">我的已办</string>
    <string name="fragment_bpm_my_apply">我的申请</string>
    <string name="fragment_bpm_my_draft">我的草稿</string>
    <!--hr-->
    <string name="fragment_hr_ask_for_leave">请假申请</string>
    <string name="fragment_hr_ask_for_metting">会议申请</string>
    <!--系统-->
    <string name="fragment_sys_setting">设置</string>
    <!--个人-->
    <string name="fragment_personal_user_info">个人信息</string>
    <string name="fragment_personal_message_list">消息列表</string>
    <string name="fragment_personal_care_list">我的关注</string>
    <string name="fragment_personal_download_file_list">我的下载</string>
    <string name="fragment_personal_upload_file_list">我的上传</string>
    <string name="fragment_personal_favorite_list">我的收藏</string>
    <string name="fragment_personal_setting">我的设置</string>
    <string name="fragment_personal_workbench">工作台</string>
    <!--社交-->
    <string name="fragment_community_zone">朋友圈</string>
    <string name="fragment_community_user_info">个人信息</string>
    <string name="fragment_community_im_friend_list">朋友列表</string>
    <string name="fragment_community_im_friend_group_list">朋友分组</string>
    <string name="fragment_community_im_orgnization_linkman_list">单位联系人</string>
    <string name="fragment_community_im_mobile_linkman_list">手机联系人</string>
    <string name="fragment_community_im_qq_linkman_list">QQ联系人</string>
    <string name="fragment_community_im_webchat_linkman_list">微信联系人</string>
    <string name="fragment_community_im_chat">聊天窗口</string>
    <string name="fragment_community_zone_work_group">朋友圈分组</string>
    <string name="fragment_community_zone_work_group_add">朋友圈添加分组</string>
    <string name="fragment_community_zone_work_group_list">朋友圈分组列表</string>
    <string name="fragment_community_activity_vote_initiate">发起投票</string>
    <string name="fragment_community_activity_notice_publish">发布通知</string>
    <string name="fragment_community_activity_orgnization_activity_publish">发布组织活动</string>

    <string name="action_settings">设置</string>
    <string name="hr">人力资源</string>
    <string name="hr_business">人力资源</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="ask_for_leave">请假申请</string>
    <string name="ask_for_meeting">会议申请</string>

    <string name="fragment_workbench">工作台</string>
    <string name="fragment_address">通讯录</string>
    <string name="fragment_zone">朋友圈</string>
    <string name="fragment_message">信息</string>
    <string name="fragment_bpm_audit">审批</string>
    <string name="bpm_start_process">提交</string>
    <string name="fragment_bpm_form_data">业务表单</string>
    <string name="fragment_personal_care">我的关注</string>
    <string name="fragment_personal_favorite">我的收藏</string>
    <string name="fragment_personal_upload">我的上传</string>
    <string name="fragment_personal_download">我的下载</string>
</resources>
